fix(user): header image, isContentVisible, images in add-post modal

--- a/src/pages/user/ui/header/index.module.scss
+++ b/src/pages/user/ui/header/index.module.scss
@@ -17,6 +17,11 @@
       height: 40px;
       border-radius: 100%;
       border: 1px solid var(--default);
+
+      * {
+        width: 100% !important;
+        height: 100% !important;
+      }
     }
 
     strong {
