--- a/src/shared/ui/carousel/index.module.scss
+++ b/src/shared/ui/carousel/index.module.scss
@@ -23,6 +23,7 @@
   .carousel-ui-image {
     position: relative;
     width: max-content;
+    max-width: max-content;
     margin: 3px;
     flex-wrap: nowrap;
 
